--- a/angular.json
+++ b/angular.json
@@ -19,14 +19,21 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "aot": false,
-            "assets": [
+            "assets": 
+            [
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [
+            "styles": 
+            [
+              "./node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": 
+            [
+              "./node_modules/jquery/dist/jquery.js",
+              "./node_modules/bootstrap/dist/js/bootstrap.js"
+            ]
           },
           "configurations": {
             "production": {
